vimeo controller done (?)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=VimeoMiner
+server.port=8082
+logging.level.rest.vimeo.controller.VimeoController = DEBUG
+vimeominer.baseuri = https://api.vimeo.com
+vimeominer.token = 81b11cb93a69116057336e2958a4566b
+
+vimeominer.maxVideos = 10
+vimeominer.maxComments = 10
+
+videominer.uri = http://localhost:8080/videominer/channels
